# lightNet-TRT

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CPPLINT.cfg  README.md  download_weights.sh  package.xml
configs/: bdd100k.names  calibration_images.txt  lightNet-BDD100K-1280x960-chPruning.cfg  lightNet-BDD100K-1280x960-chPruning.txt  lightNet-BDD100K-1280x960.cfg  lightNet-BDD100K-1280x960.txt  lightNet-BDD100K-chPruning-det-semaseg-1280x960.cfg  lightNet-BDD100K-chPruning-det-semaseg-1280x960.txt  lightNet-BDD100K-det-semaseg-1280x960-calibration.table  lightNet-BDD100K-det-semaseg-1280x960.cfg  lightNet-BDD100K-det-semaseg-1280x960.txt  yolov8x-BDD100K-640x640-T4-lane4cls.cfg  yolov8x-BDD100K-640x640-T4-lane4cls.txt  yolov8x-BDD100K-640x640.cfg  yolov8x-BDD100K-640x640.txt
extra/: API.h  class_timer.hpp
launch/: lightnet_trt.launch.xml
modules/: calibrator.cpp  calibrator.h  chunk.cu  chunk.h  class_detector.cpp  class_detector.h  class_yolo_detector.hpp  colormap.hpp  detect.cu  detect.h  ds_image.cpp  ds_image.h  hardswish.cu  hardswish.h  kernel.cu  logging.h  mish.cu  mish.h  plugin_factory.cpp  plugin_factory.h  preprocess.cu  preprocess.h  profiler.cpp  profiler.h  trt_utils.cpp  trt_utils.h  yolo.cpp  yolo.h  yolo_config_parser.cpp  yolo_config_parser.h  yoloplugin_lib.cpp  yoloplugin_lib.h  yolov2.cpp  yolov2.h  yolov3.cpp  yolov3.h  yolov4.cpp  yolov4.h  yolov5.cpp  yolov5.h
ros_config/: lightnet_trt.param.yaml
samples/: parallel_executor.cpp  sample_detector.cpp
src/: lightnet_trt_core.cpp  lightnet_trt_core.hpp  lightnet_trt_node.cpp  lightnet_trt_node.hpp  main.cpp  utils.cpp  utils.hpp
